version2.0_solve/scanner.output
Terminals unused in grammar

   SPECIAL


状态 4conflicts: 1 shift/reduce
状态 11conflicts: 1 shift/reduce
状态 12conflicts: 1 shift/reduce
状态 15conflicts: 1 shift/reduce
状态 46conflicts: 1 shift/reduce
状态 50conflicts: 1 shift/reduce
状态 96conflicts: 3 reduce/reduce
状态 146conflicts: 2 reduce/reduce
状态 189conflicts: 5 reduce/reduce
状态 305conflicts: 3 reduce/reduce
状态 375conflicts: 1 shift/reduce


语法

    0 $accept: translation_unit $end

    1 primary_expr: identifier
    2             | const_int
    3             | const_char
    4             | const_float
    5             | string_literal
    6             | '(' expr ')'

    7 postfix_expr: primary_expr
    8             | postfix_expr '[' expr ']'
    9             | postfix_expr '(' argument_expr_list ')'
   10             | postfix_expr '.' identifier
   11             | postfix_expr op_ptr identifier
   12             | postfix_expr op_pp
   13             | postfix_expr op_dd
   14             | '(' type_name ')' '{' init_list '}'
   15             | '(' type_name ')' '{' init_list ',' '}'

   16 argument_expr_list: assignment_expr
   17                   | argument_expr_list ',' assignment_expr

   18 unary_expr: postfix_expr
   19           | op_pp unary_expr
   20           | op_dd unary_expr
   21           | op_unary cast_expr
   22           | SIZEOF unary_expr
   23           | SIZEOF '(' type_name ')'

   24 op_unary: '&'
   25         | '*'
   26         | '+'
   27         | '-'
   28         | '~'
   29         | '!'

   30 cast_expr: unary_expr
   31          | '(' type_name ')' cast_expr

   32 multiplicative_expr: cast_expr
   33                    | multiplicative_expr '*' cast_expr
   34                    | multiplicative_expr '/' cast_expr
   35                    | multiplicative_expr '%' cast_expr

   36 additive_expr: multiplicative_expr
   37              | additive_expr '+' multiplicative_expr
   38              | additive_expr '-' multiplicative_expr

   39 shift_expr: additive_expr
   40           | shift_expr op_lshift additive_expr
   41           | shift_expr op_rshift additive_expr

   42 relational_expr: shift_expr
   43                | relational_expr '<' shift_expr
   44                | relational_expr '>' shift_expr
   45                | relational_expr op_le shift_expr
   46                | relational_expr op_ge shift_expr

   47 equality_expr: relational_expr
   48              | equality_expr op_eq relational_expr
   49              | equality_expr op_ne relational_expr

   50 AND_expr: equality_expr
   51         | AND_expr '&' equality_expr

   52 ex_OR_expr: AND_expr
   53           | ex_OR_expr '^' AND_expr

   54 in_OR_expr: ex_OR_expr
   55           | in_OR_expr '|' ex_OR_expr

   56 logical_AND_expr: in_OR_expr
   57                 | logical_AND_expr op_and in_OR_expr

   58 logical_OR_expr: logical_AND_expr
   59                | logical_OR_expr op_or logical_AND_expr

   60 conditional_expr: logical_OR_expr
   61                 | logical_OR_expr '?' expr ':' conditional_expr

   62 assignment_expr: conditional_expr
   63                | unary_expr op_assign assignment_expr

   64 expr: assignment_expr
   65     | expr ',' assignment_expr

   66 constant_expr: conditional_expr

   67 declaration: declaration_spec ';'
   68            | declaration_spec init_declarator_list ';'

   69 declaration_spec: storage_class_spec
   70                 | storage_class_spec declaration_spec
   71                 | type_spec
   72                 | type_spec declaration_spec
   73                 | type_qualifier
   74                 | type_qualifier declaration_spec
   75                 | func_spec
   76                 | func_spec declaration_spec

   77 init_declarator_list: init_declarator
   78                     | init_declarator_list ',' init_declarator

   79 init_declarator: declarator
   80                | declarator '=' initializer

   81 storage_class_spec: STATIC
   82                   | storage_class_specifier

   83 type_spec: type_specifier
   84          | struct_or_union_spec
   85          | enum_spec
   86          | typedef_name

   87 struct_or_union_spec: struct_or_union '{' struct_declaration_list '}'
   88                     | struct_or_union identifier '{' struct_declaration_list '}'
   89                     | struct_or_union identifier

   90 struct_declaration_list: struct_declaration
   91                        | struct_declaration_list struct_declaration

   92 struct_declaration: spec_qual_list struct_declarator_list ';'

   93 spec_qual_list: type_spec
   94               | type_spec spec_qual_list
   95               | type_qual
   96               | type_qual spec_qual_list

   97 struct_declarator_list: struct_declarator
   98                       | struct_declarator_list ',' struct_declarator

   99 struct_declarator: declarator
  100                  | ':' constant_expr
  101                  | declarator ':' constant_expr

  102 enum_spec: ENUM '{' enum_list '}'
  103          | ENUM identifier '{' enum_list '}'
  104          | ENUM '{' enum_list ',' '}'
  105          | ENUM identifier '{' enum_list ',' '}'
  106          | ENUM identifier

  107 enum_list: enumerator
  108          | enum_list ',' enumerator

  109 enumerator: enum_constant
  110           | enum_constant '=' constant_expr

  111 enum_constant: identifier

  112 type_qual: type_qualifier

  113 func_spec: INLINE

  114 declarator: direct_declarator
  115           | pointer direct_declarator

  116 direct_declarator: identifier
  117                  | '(' declarator ')'
  118                  | direct_declarator '[' ']'
  119                  | direct_declarator '[' type_qual_list ']'
  120                  | direct_declarator '[' assignment_expr ']'
  121                  | direct_declarator '[' type_qual_list assignment_expr ']'
  122                  | direct_declarator '[' STATIC assignment_expr ']'
  123                  | direct_declarator '[' STATIC type_qual_list assignment_expr ']'
  124                  | direct_declarator '[' type_qual_list STATIC assignment_expr ']'
  125                  | direct_declarator '[' '*' ']'
  126                  | direct_declarator '[' type_qual_list '*' ']'
  127                  | direct_declarator '(' para_type_list ')'
  128                  | direct_declarator '(' ')'
  129                  | direct_declarator '(' identifier_list ')'

  130 pointer: '*'
  131        | '*' type_qual_list
  132        | '*' pointer
  133        | '*' type_qual_list pointer

  134 type_qual_list: type_qual
  135               | type_qual_list type_qual

  136 para_type_list: para_list
  137               | para_list ',' ellipsis

  138 para_list: para_declaration
  139          | para_list ',' para_declaration

  140 para_declaration: declaration_spec declarator
  141                 | declaration_spec
  142                 | declaration_spec abstract_declarator

  143 identifier_list: identifier
  144                | identifier_list ',' identifier

  145 type_name: spec_qual_list
  146          | spec_qual_list abstract_declarator

  147 abstract_declarator: pointer
  148                    | direct_abstract_declarator
  149                    | pointer direct_abstract_declarator

  150 direct_abstract_declarator: '(' abstract_declarator ')'
  151                           | '[' ']'
  152                           | direct_abstract_declarator '[' ']'
  153                           | '[' type_qual_list ']'
  154                           | '[' assignment_expr ']'
  155                           | direct_abstract_declarator '[' type_qual_list ']'
  156                           | direct_abstract_declarator '[' assignment_expr ']'
  157                           | '[' type_qual_list assignment_expr ']'
  158                           | direct_abstract_declarator '[' type_qual_list assignment_expr ']'
  159                           | '[' STATIC assignment_expr ']'
  160                           | direct_abstract_declarator '[' STATIC assignment_expr ']'
  161                           | '[' STATIC type_qual_list assignment_expr ']'
  162                           | direct_abstract_declarator '[' STATIC type_qual_list assignment_expr ']'
  163                           | '[' type_qual_list STATIC assignment_expr ']'
  164                           | direct_abstract_declarator '[' type_qual_list STATIC assignment_expr ']'
  165                           | '[' '*' ']'
  166                           | direct_abstract_declarator '[' '*' ']'
  167                           | '(' ')'
  168                           | direct_abstract_declarator '(' ')'
  169                           | '(' para_type_list ')'
  170                           | direct_abstract_declarator '(' para_type_list ')'

  171 typedef_name: identifier

  172 initializer: assignment_expr
  173            | '{' init_list '}'
  174            | '{' init_list ',' '}'

  175 init_list: initializer
  176          | designation initializer
  177          | init_list ',' initializer
  178          | init_list ',' designation initializer

  179 designation: designator_list '='

  180 designator_list: designator
  181                | designator_list designator

  182 designator: '[' constant_expr ']'
  183           | '.' identifier

  184 statement: labeled_statement
  185          | compound_statement
  186          | expr_statement
  187          | selection_statement
  188          | iteration_statement
  189          | jump_statement

  190 labeled_statement: identifier ':' statement
  191                  | CASE constant_expr ':' statement
  192                  | DEFAULT ':' statement

  193 compound_statement: '{' '}'
  194                   | '{' block_item_list '}'

  195 block_item_list: block_item
  196                | block_item_list block_item

  197 block_item: declaration
  198           | statement

  199 expr_statement: ';'
  200               | expr ';'

  201 selection_statement: IF '(' expr ')' statement
  202                    | IF '(' expr ')' statement ELSE statement
  203                    | SWITCH '(' expr ')' statement

  204 iteration_statement: WHILE '(' expr ')' statement
  205                    | DO statement WHILE '(' expr ')' ';'
  206                    | FOR '(' ')' statement
  207                    | FOR '(' expr ';' ';' ')' statement
  208                    | FOR '(' ';' expr ';' ')' statement
  209                    | FOR '(' ';' ';' expr ')' statement
  210                    | FOR '(' expr ';' expr ';' ')' statement
  211                    | FOR '(' expr ';' ';' expr ')' statement
  212                    | FOR '(' ';' expr ';' expr ')' statement
  213                    | FOR '(' expr ';' expr ';' expr ')' statement
  214                    | FOR '(' declaration ';' ')' statement
  215                    | FOR '(' declaration expr ';' ')' statement
  216                    | FOR '(' declaration ';' expr ')' statement
  217                    | FOR '(' declaration expr ';' expr ')' statement

  218 jump_statement: GOTO identifier ';'
  219               | CONTINUE ';'
  220               | BREAK ';'
  221               | RETURN ';'
  222               | RETURN expr ';'

  223 translation_unit: external_declaration
  224                 | translation_unit external_declaration

  225 external_declaration: func_definition
  226                     | declaration

  227 func_definition: declaration_spec declarator compound_statement
  228                | declaration_spec declarator declaration_list compound_statement

  229 declaration_list: declaration
  230                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 29
'%' (37) 35
'&' (38) 24 51
'(' (40) 6 9 14 15 23 31 117 127 128 129 150 167 168 169 170 201 202
    203 204 205 206 207 208 209 210 211 212 213 214 215 216 217
')' (41) 6 9 14 15 23 31 117 127 128 129 150 167 168 169 170 201 202
    203 204 205 206 207 208 209 210 211 212 213 214 215 216 217
'*' (42) 25 33 125 126 130 131 132 133 165 166
'+' (43) 26 37
',' (44) 15 17 65 78 98 104 105 108 137 139 144 174 177 178
'-' (45) 27 38
'.' (46) 10 183
'/' (47) 34
':' (58) 61 100 101 190 191 192
';' (59) 67 68 92 199 200 205 207 208 209 210 211 212 213 214 215 216
    217 218 219 220 221 222
'<' (60) 43
'=' (61) 80 110 179
'>' (62) 44
'?' (63) 61
'[' (91) 8 118 119 120 121 122 123 124 125 126 151 152 153 154 155
    156 157 158 159 160 161 162 163 164 165 166 182
']' (93) 8 118 119 120 121 122 123 124 125 126 151 152 153 154 155
    156 157 158 159 160 161 162 163 164 165 166 182
'^' (94) 53
'{' (123) 14 15 87 88 102 103 104 105 173 174 193 194
'|' (124) 55
'}' (125) 14 15 87 88 102 103 104 105 173 174 193 194
'~' (126) 28
error (256)
SPECIAL (258)
INLINE (259) 113
DO (260) 205
FOR (261) 206 207 208 209 210 211 212 213 214 215 216 217
WHILE (262) 204 205
BREAK (263) 220
CONTINUE (264) 219
GOTO (265) 218
RETURN (266) 221 222
IF (267) 201 202
ELSE (268) 202
SWITCH (269) 203
ENUM (270) 102 103 104 105 106
CASE (271) 191
DEFAULT (272) 192
STATIC (273) 81 122 123 124 159 160 161 162 163 164
SIZEOF (274) 22 23
type_qualifier (275) 73 74 112
storage_class_specifier (276) 82
type_specifier (277) 83
struct_or_union (278) 87 88 89
identifier (279) 1 10 11 88 89 103 105 106 111 116 143 144 171 183
    190 218
const_int (280) 2
const_char (281) 3
const_float (282) 4
string_literal (283) 5
ellipsis (284) 137
op_assign (285) 63
op_and (286) 57
op_or (287) 59
op_eq (288) 48
op_ne (289) 49
op_le (290) 45
op_ge (291) 46
op_lshift (292) 40
op_rshift (293) 41
op_ptr (294) 11
op_pp (295) 12 19
op_dd (296) 13 20


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
primary_expr (67)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expr (68)
    on left: 7 8 9 10 11 12 13 14 15, on right: 8 9 10 11 12 13 18
argument_expr_list (69)
    on left: 16 17, on right: 9 17
unary_expr (70)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
op_unary (71)
    on left: 24 25 26 27 28 29, on right: 21
cast_expr (72)
    on left: 30 31, on right: 21 31 32 33 34 35
multiplicative_expr (73)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expr (74)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expr (75)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expr (76)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expr (77)
    on left: 47 48 49, on right: 48 49 50 51
AND_expr (78)
    on left: 50 51, on right: 51 52 53
ex_OR_expr (79)
    on left: 52 53, on right: 53 54 55
in_OR_expr (80)
    on left: 54 55, on right: 55 56 57
logical_AND_expr (81)
    on left: 56 57, on right: 57 58 59
logical_OR_expr (82)
    on left: 58 59, on right: 59 60 61
conditional_expr (83)
    on left: 60 61, on right: 61 62 66
assignment_expr (84)
    on left: 62 63, on right: 16 17 63 64 65 120 121 122 123 124 154
    156 157 158 159 160 161 162 163 164 172
expr (85)
    on left: 64 65, on right: 6 8 61 65 200 201 202 203 204 205 207
    208 209 210 211 212 213 215 216 217 222
constant_expr (86)
    on left: 66, on right: 100 101 110 182 191
declaration (87)
    on left: 67 68, on right: 197 214 215 216 217 226 229 230
declaration_spec (88)
    on left: 69 70 71 72 73 74 75 76, on right: 67 68 70 72 74 76 140
    141 142 227 228
init_declarator_list (89)
    on left: 77 78, on right: 68 78
init_declarator (90)
    on left: 79 80, on right: 77 78
storage_class_spec (91)
    on left: 81 82, on right: 69 70
type_spec (92)
    on left: 83 84 85 86, on right: 71 72 93 94
struct_or_union_spec (93)
    on left: 87 88 89, on right: 84
struct_declaration_list (94)
    on left: 90 91, on right: 87 88 91
struct_declaration (95)
    on left: 92, on right: 90 91
spec_qual_list (96)
    on left: 93 94 95 96, on right: 92 94 96 145 146
struct_declarator_list (97)
    on left: 97 98, on right: 92 98
struct_declarator (98)
    on left: 99 100 101, on right: 97 98
enum_spec (99)
    on left: 102 103 104 105 106, on right: 85
enum_list (100)
    on left: 107 108, on right: 102 103 104 105 108
enumerator (101)
    on left: 109 110, on right: 107 108
enum_constant (102)
    on left: 111, on right: 109 110
type_qual (103)
    on left: 112, on right: 95 96 134 135
func_spec (104)
    on left: 113, on right: 75 76
declarator (105)
    on left: 114 115, on right: 79 80 99 101 117 140 227 228
direct_declarator (106)
    on left: 116 117 118 119 120 121 122 123 124 125 126 127 128 129,
    on right: 114 115 118 119 120 121 122 123 124 125 126 127 128 129
pointer (107)
    on left: 130 131 132 133, on right: 115 132 133 147 149
type_qual_list (108)
    on left: 134 135, on right: 119 121 123 124 126 131 133 135 153
    155 157 158 161 162 163 164
para_type_list (109)
    on left: 136 137, on right: 127 169 170
para_list (110)
    on left: 138 139, on right: 136 137 139
para_declaration (111)
    on left: 140 141 142, on right: 138 139
identifier_list (112)
    on left: 143 144, on right: 129 144
type_name (113)
    on left: 145 146, on right: 14 15 23 31
abstract_declarator (114)
    on left: 147 148 149, on right: 142 146 150
direct_abstract_declarator (115)
    on left: 150 151 152 153 154 155 156 157 158 159 160 161 162 163
    164 165 166 167 168 169 170, on right: 148 149 152 155 156 158
    160 162 164 166 168 170
typedef_name (116)
    on left: 171, on right: 86
initializer (117)
    on left: 172 173 174, on right: 80 175 176 177 178
init_list (118)
    on left: 175 176 177 178, on right: 14 15 173 174 177 178
designation (119)
    on left: 179, on right: 176 178
designator_list (120)
    on left: 180 181, on right: 179 181
designator (121)
    on left: 182 183, on right: 180 181
statement (122)
    on left: 184 185 186 187 188 189, on right: 190 191 192 198 201
    202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217
labeled_statement (123)
    on left: 190 191 192, on right: 184
compound_statement (124)
    on left: 193 194, on right: 185 227 228
block_item_list (125)
    on left: 195 196, on right: 194 196
block_item (126)
    on left: 197 198, on right: 195 196
expr_statement (127)
    on left: 199 200, on right: 186
selection_statement (128)
    on left: 201 202 203, on right: 187
iteration_statement (129)
    on left: 204 205 206 207 208 209 210 211 212 213 214 215 216 217,
    on right: 188
jump_statement (130)
    on left: 218 219 220 221 222, on right: 189
translation_unit (131)
    on left: 223 224, on right: 0 224
external_declaration (132)
    on left: 225 226, on right: 223 224
func_definition (133)
    on left: 227 228, on right: 225
declaration_list (134)
    on left: 229 230, on right: 228 230


State 0

    0 $accept: . translation_unit $end
   67 declaration: . declaration_spec ';'
   68            | . declaration_spec init_declarator_list ';'
   69 declaration_spec: . storage_class_spec
   70                 | . storage_class_spec declaration_spec
   71                 | . type_spec
   72                 | . type_spec declaration_spec
   73                 | . type_qualifier
   74                 | . type_qualifier declaration_spec
   75                 | . func_spec
   76                 | . func_spec declaration_spec
   81 storage_class_spec: . STATIC
   82                   | . storage_class_specifier
   83 type_spec: . type_specifier
   84          | . struct_or_union_spec
   85          | . enum_spec
   86          | . typedef_name
   87 struct_or_union_spec: . struct_or_union '{' struct_declaration_list '}'
   88                     | . struct_or_union identifier '{' struct_declaration_list '}'
   89                     | . struct_or_union identifier
  102 enum_spec: . ENUM '{' enum_list '}'
  103          | . ENUM identifier '{' enum_list '}'
  104          | . ENUM '{' enum_list ',' '}'
  105          | . ENUM identifier '{' enum_list ',' '}'
  106          | . ENUM identifier
  113 func_spec: . INLINE
  171 typedef_name: . identifier
  223 translation_unit: . external_declaration
  224                 | . translation_unit external_declaration
  225 external_declaration: . func_definition
  226                     | . declaration
  227 func_definition: . declaration_spec declarator compound_statement
  228                | . declaration_spec declarator declaration_list compound_statement

    INLINE                   shift, and go to state 1
    ENUM                     shift, and go to state 2
    STATIC                   shift, and go to state 3
    type_qualifier           shift, and go to state 4
    storage_class_specifier  shift, and go to state 5
    type_specifier           shift, and go to state 6
    struct_or_union          shift, and go to state 7
    identifier               shift, and go to state 8

    declaration           转到状态 9
    declaration_spec      转到状态 10
    storage_class_spec    转到状态 11
    type_spec             转到状态 12
    struct_or_union_spec  转到状态 13
    enum_spec             转到状态 14
    func_spec             转到状态 15
    typedef_name          转到状态 16
    translation_unit      转到状态 17
    external_declaration  转到状态 18
    func_definition       转到状态 19


State 1

  113 func_spec: INLINE .

    $default  reduce using rule 113 (func_spec)


State 2

  102 enum_spec: ENUM . '{' enum_list '}'
  103          | ENUM . identifier '{' enum_list '}'
  104          | ENUM . '{' enum_list ',' '}'
  105          | ENUM . identifier '{' enum_list ',' '}'
  106          | ENUM . identifier

    identifier  shift, and go to state 20
    '{'         shift, and go to state 21


State 3

   81 storage_class_spec: STATIC .

    $default  reduce using rule 81 (storage_class_spec)


State 4

   69 declaration_spec: . storage_class_spec
   70                 | . storage_class_spec declaration_spec
   71                 | . type_spec
   72                 | . type_spec declaration_spec
   73                 | . type_qualifier
   73                 | type_qualifier .  [identifier, '(', ')', '[', ',', '*', ';']
   74                 | . type_qualifier declaration_spec
   74                 | type_qualifier . declaration_spec
   75                 | . func_spec
   76                 | . func_spec declaration_spec
   81 storage_class_spec: . STATIC
   82                   | . storage_class_specifier
   83 type_spec: . type_specifier
   84          | . struct_or_union_spec
   85          | . enum_spec
   86          | . typedef_name
   87 struct_or_union_spec: . struct_or_union '{' struct_declaration_list '}'
   88                     | . struct_or_union identifier '{' struct_declaration_list '}'
   89                     | . struct_or_union identifier
  102 enum_spec: . ENUM '{' enum_list '}'
  103          | . ENUM identifier '{' enum_list '}'
  104          | . ENUM '{' enum_list ',' '}'
  105          | . ENUM identifier '{' enum_list ',' '}'
  106          | . ENUM identifier
  113 func_spec: . INLINE
  171 typedef_name: . identifier

    INLINE                   shift, and go to state 1
    ENUM                     shift, and go to state 2
    STATIC                   shift, and go to state 3
    type_qualifier           shift, and go to state 4
    storage_class_specifier  shift, and go to state 5
    type_specifier           shift, and go to state 6
    struct_or_union          shift, and go to state 7
    identifier               shift, and go to state 8

    identifier  [reduce using rule 73 (declaration_spec)]
    $default    reduce using rule 73 (declaration_spec)

    declaration_spec      转到状态 22
    storage_class_spec    转到状态 11
    type_spec             转到状态 12
    struct_or_union_spec  转到状态 13
    enum_spec             转到状态 14
    func_spec             转到状态 15
    typedef_name          转到状态 16


State 5

   82 storage_class_spec: storage_class_specifier .

    $default  reduce using rule 82 (storage_class_spec)


State 6

   83 type_spec: type_specifier .

    $default  reduce using rule 83 (type_spec)


State 7

   87 struct_or_union_spec: struct_or_union . '{' struct_declaration_list '}'
   88                     | struct_or_union . identifier '{' struct_declaration_list '}'
   89                     | struct_or_union . identifier

    identifier  shift, and go to state 23
    '{'         shift, and go to state 24


State 8

  171 typedef_name: identifier .

    $default  reduce using rule 171 (typedef_name)


State 9

  226 external_declaration: declaration .

    $default  reduce using rule 226 (external_declaration)


State 10

   67 declaration: declaration_spec . ';'
   68            | declaration_spec . init_declarator_list ';'
   77 init_declarator_list: . init_declarator
   78                     | . init_declarator_list ',' init_declarator
   79 init_declarator: . declarator
   80                | . declarator '=' initializer
  114 declarator: . direct_declarator
  115           | . pointer direct_declarator
  116 direct_declarator: . identifier
  117                  | . '(' declarator ')'
  118                  | . direct_declarator '[' ']'
  119                  | . direct_declarator '[' type_qual_list ']'
  120                  | . direct_declarator '[' assignment_expr ']'
  121                  | . direct_declarator '[' type_qual_list assignment_expr ']'
  122                  | . direct_declarator '[' STATIC assignment_expr ']'
  123                  | . direct_declarator '[' STATIC type_qual_list assignment_expr ']'
  124                  | . direct_declarator '[' type_qual_list STATIC assignment_expr ']'
  125                  | . direct_declarator '[' '*' ']'
  126                  | . direct_declarator '[' type_qual_list '*' ']'
  127                  | . direct_declarator '(' para_type_list ')'
  128                  | . direct_declarator '(' ')'
  129                  | . direct_declarator '(' identifier_list ')'
  130 pointer: . '*'
  131        | . '*' type_qual_list
  132        | . '*' pointer
  133        | . '*' type_qual_list pointer
  227 func_definition: declaration_spec . declarator compound_statement
  228                | declaration_spec . declarator declaration_list compound_statement

    identifier  shift, and go to state 25
    '('         shift, and go to state 26
    '*'         shift, and go to state 27
    ';'         shift, and go to state 28

    init_declarator_list  转到状态 29
    init_declarator       转到状态 30
    declarator            转到状态 31
    direct_declarator     转到状态 32
    pointer               转到状态 33


State 11

   69 declaration_spec: . storage_class_spec
   69                 | storage_class_spec .  [identifier, '(', ')', '[', ',', '*', ';']
   70                 | . storage_class_spec declaration_spec
   70                 | storage_class_spec . declaration_spec
   71                 | . type_spec
   72                 | . type_spec declaration_spec
   73                 | . type_qualifier
   74                 | . type_qualifier declaration_spec
   75                 | . func_spec
   76                 | . func_spec declaration_spec
   81 storage_class_spec: . STATIC
   82                   | . storage_class_specifier
   83 type_spec: . type_specifier
   84          | . struct_or_union_spec
   85          | . enum_spec
   86          | . typedef_name
   87 struct_or_union_spec: . struct_or_union '{' struct_declaration_list '}'
   88                     | . struct_or_union identifier '{' struct_declaration_list '}'
   89                     | . struct_or_union identifier
  102 enum_spec: . ENUM '{' enum_list '}'
  103          | . ENUM identifier '{' enum_list '}'
  104          | . ENUM '{' enum_list ',' '}'
  105          | . ENUM identifier '{' enum_list ',' '}'
  106          | . ENUM identifier
  113 func_spec: . INLINE
  171 typedef_name: . identifier

    INLINE                   shift, and go to state 1
    ENUM                     shift, and go to state 2
    STATIC                   shift, and go to state 3
    type_qualifier           shift, and go to state 4
    storage_class_specifier  shift, and go to state 5
    type_specifier           shift, and go to state 6
    struct_or_union          shift, and go to state 7
    identifier               shift, and go to state 8

    identifier  [reduce using rule 69 (declaration_spec)]
    $default    reduce using rule 69 (declaration_spec)
